серьёзная доработка прав доступа в карточках: сделано инплейс редактирование прав доступа!

--- a/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
@@ -74,6 +74,10 @@ body{
   text-align: center !important;  
 }
 
+.colRight{
+    text-align: center !important;
+    width: 7%;
+}
 .colTop{
     vertical-align: top !important;
 }
