--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -4,7 +4,6 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:pe="http://primefaces.org/ui/extensions"
-                xmlns:custom="http://java.sun.com/jsf/composite/components"
                 template="/view/templ/templ.xhtml">
 
     <ui:param name="_frm" value="#{_bean.itemObjName}"/>
@@ -22,7 +21,8 @@
     </ui:define>
 
     <ui:define name="body">
-        <ui:include src="/view/common/error-dlg.xhtml"/>
+        <p:importConstants type="com.maxfill.dictionary.DictRights" var="DictRights" />
+
         <script type="text/javascript" >
             function checkEsc(componentName) {
                 if (event.keyCode === 27) {
@@ -133,6 +133,7 @@
                         <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" dynamic="true" cache="true">
                             <ui:insert name="page_body"/>
                             <ui:include src="/view/common/dict-rights.xhtml"/>
+                            <ui:insert name="childs_rights"/>
                             <ui:include src="/view/common/dict-info.xhtml"/>
                             <ui:include src="/view/common/dict-log.xhtml"/> 
                         </p:tabView>                         
@@ -142,5 +143,6 @@
             </pe:layoutPane>
         </pe:layout>
         <ui:include src="/view/sys/noSaveDlg.xhtml" />
+        <ui:include src="/view/common/error-dlg.xhtml"/>
     </ui:define>
 </ui:composition>
